Refacotrs filter list.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3864,6 +3864,22 @@ img {
   float: right;
 }
 /* topdoc
+  name: Align with button
+  family: cfgov-utilities
+  patterns:
+    - name: Utility class
+      codenotes:
+        - ".u-align-with-btn(@font-size: @base-font-size-px);"
+      notes:
+        - "Adds top padding (among other things) to help alignment with buttons."
+        - "If you pass no arguments then the padding will be calculated using
+          @base-font-size-px."
+        - "Pass one argument to use a custom font size to calculate the top
+          padding."
+  tags:
+    - cfgov-utilities
+*/
+/* topdoc
   name: Flexible proportional containers
   family: cfgov-utilities
   notes:
@@ -5341,59 +5357,9 @@ img {
         - .list_link
       notes:
         - "Notice that you can use any element for .list_link."
-    - name: List label
-      markup: |
-        <ul class="list">
-            <li class="list_item">
-                <h3 class="list_label">Unordered</h3>
-                <ul class="list">
-                    <li class="list_item">
-                        <h4 class="list_label">Unordered</h4>
-                        <ul class="list">
-                            <li class="list_item">
-                                <a class="list_link">List item 1</a>
-                            </li>
-                            <li class="list_item">
-                                <a class="list_link">List item 2</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li class="list_item">
-                <h3 class="list_label">Definition list</h3>
-                <ul class="list">
-                    <li class="list_item">
-                        <a class="list_link">List item 1</a>
-                    </li>
-                    <li class="list_item">
-                        <a class="list_link">List item 2</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-      codenotes:
-        - .list_label
-      notes:
-        - "Notice that you can use any element for .list_label."
   tags:
     - cfgov-misc
 */
-.list_label {
-  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 0.35714286em;
-  font-size: 0.875em;
-  line-height: 1.57142857;
-  display: block;
-}
-.lt-ie9 .list_label {
-  font-weight: normal !important;
-}
 .list_link {
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
   font-style: normal;
@@ -5410,9 +5376,6 @@ img {
       markup: |
         <ul class="list list__unstyled">
             <li class="list_item">
-                <h3 class="list_label">Unordered list</h3>
-            </li>
-            <li class="list_item">
                 <a class="list_link">List item 1</a>
             </li>
             <li class="list_item">
@@ -5422,29 +5385,8 @@ img {
                 <a class="list_link">List item 3</a>
             </li>
         </ul>
-        <dl class="list list__unstyled">
-            <dt class="list_item">
-                <span class="list_label">Definition list</span>
-            </dt>
-            <dd class="list_item">
-                <a class="list_link">List item 1</a>
-            </dd>
-            <dd class="list_item">
-                <a class="list_link">List item 2</a>
-            </dd>
-            <dd class="list_item">
-                <a class="list_link">List item 3</a>
-            </dd>
-        </dl>
       codenotes:
-        - |
-          Structural cheat sheet:
-          -----------------------
-          .list.list__unstyled
-            .list_item
-              .list_label
-            .list_item
-              .list_link
+        - .list.list__unstyled
   tags:
     - cfgov-misc
 */
@@ -5489,9 +5431,6 @@ img {
       markup: |
         <ul class="list list__horizontal">
             <li class="list_item">
-                <h3 class="list_label">List label</h3>
-            </li>
-            <li class="list_item">
                 <a class="list_link">List item 1</a>
             </li>
             <li class="list_item">
@@ -5518,98 +5457,144 @@ img {
   margin-left: 0;
 }
 /* topdoc
-  name: Filtered-by list
+  name: Filter list
   family: cfgov-misc
   patterns:
-    - name: A list of applied filters
+    - name: Default example
       markup: |
-        <dl class="list list__filtered-by list__horizontal">
+        <dl class="filtered-by list list__horizontal">
             <dt class="list_item">
-                <span class="list_label">Filtered by</span>
+                <span class="filtered-by_header">Filtered by</span>
             </dt>
             <dd class="list_item">
-                <span class="list_link">Lorem,</span>
+                <span class="filtered-by_filter">Lorem,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Ipsum,</span>
+                <span class="filtered-by_filter">Ipsum,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Dolor,</span>
+                <span class="filtered-by_filter">Dolor,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Sit,</span>
+                <span class="filtered-by_filter">Sit,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Amet,</span>
+                <span class="filtered-by_filter">Amet,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Consectetur,</span>
+                <span class="filtered-by_filter">Lorem,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Adipisicing,</span>
+                <span class="filtered-by_filter">Ipsum,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Id,</span>
+                <span class="filtered-by_filter">Dolor,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Accusantium,</span>
+                <span class="filtered-by_filter">Sit,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Adipisci,</span>
+                <span class="filtered-by_filter">Amet,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Voluptatem,</span>
+                <span class="filtered-by_filter">Lorem,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Quibusdam,</span>
+                <span class="filtered-by_filter">Ipsum,</span>
             </dd>
             <dd class="list_item">
-                <span class="list_link">Ducimus</span>
+                <span class="filtered-by_filter">Dolor,</span>
+            </dd>
+            <dd class="list_item">
+                <span class="filtered-by_filter">Sit,</span>
+            </dd>
+            <dd class="list_item">
+                <span class="filtered-by_filter">Amet</span>
             </dd>
         </dl>
-      codenotes:
-        - |
-          Structural cheat sheet:
-          -----------------------
-          .list.list__filtered-by.list__horizontal
-            .list_item
-              .list_label
-            .list_item
-              .list_link
-      notes:
-        - "If you need a vertical 'filtered by' list you can replace
-          .list__horizontal with .list__unstyled."
+    - name: Filters aligned with a button
+      markup: |
+        <a class="btn btn-secondary"
+           style="float:right;"
+           href="#">
+            Filter
+        </a>
+        <dl class="filtered-by filtered-by__align-with-btn list list__horizontal">
+            <dt class="list_item">
+                <span class="filtered-by_header">Filtered by</span>
+            </dt>
+            <dd class="list_item">
+                <span class="filtered-by_filter">Lorem,</span>
+            </dd>
+            <dd class="list_item">
+                <span class="filtered-by_filter">Ipsum,</span>
+            </dd>
+            <dd class="list_item">
+                <span class="filtered-by_filter">Dolor,</span>
+            </dd>
+            <dd class="list_item">
+                <span class="filtered-by_filter">Sit,</span>
+            </dd>
+            <dd class="list_item">
+                <span class="filtered-by_filter">Amet,</span>
+            </dd>
+        </dl>
   tags:
     - cfgov-misc
 */
-.list__filtered-by.list__horizontal .list_label {
-  margin-bottom: 0;
+.filtered-by {
+  margin: 0;
 }
-.list__filtered-by .list_link {
+.filtered-by_header {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0.35714286em;
+  font-size: 0.875em;
+  line-height: 1.57142857;
+  margin-bottom: 0.71428571em;
+  margin: 0;
+  color: #101820;
+}
+.lt-ie9 .filtered-by_header {
+  font-weight: normal !important;
+}
+.filtered-by__align-with-btn .filtered-by_header {
+  display: inline-block;
+  padding-top: 0.64285714em;
+  line-height: normal;
+}
+.filtered-by_filter {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   color: #75787b;
 }
-.list__filtered-by .list_link em,
-.list__filtered-by .list_link i {
+.filtered-by_filter em,
+.filtered-by_filter i {
   font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
   font-style: italic;
   font-weight: normal;
 }
-.lt-ie9 .list__filtered-by .list_link em,
-.lt-ie9 .list__filtered-by .list_link i {
+.lt-ie9 .filtered-by_filter em,
+.lt-ie9 .filtered-by_filter i {
   font-style: normal !important;
 }
-.list__filtered-by .list_link strong,
-.list__filtered-by .list_link b {
+.filtered-by_filter strong,
+.filtered-by_filter b {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
 }
-.lt-ie9 .list__filtered-by .list_link strong,
-.lt-ie9 .list__filtered-by .list_link b {
+.lt-ie9 .filtered-by_filter strong,
+.lt-ie9 .filtered-by_filter b {
   font-weight: normal !important;
+}
+.filtered-by_filter input {
+  margin-right: 0.375em;
 }
 /* topdoc
   name: Share icon
