Stop filtered-by from using form label classes because it does more harm than good.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -696,7 +696,7 @@
     margin: 0;
 
     &_header {
-        .form-label-header;
+        .h5();
         margin: 0;
         color: @black;
 
@@ -706,7 +706,7 @@
     }
 
     &_filter {
-        .form-label;
+        .webfont-regular();
         color: @gray;
     }
 }
