--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -5,6 +5,26 @@
 
 
 /* topdoc
+  name: Expandables
+  family: cfgov-misc
+  patterns:
+    - name: Header right on medium
+      codenotes:
+        - .expandable_header-right__on-medium
+  tags:
+    - cfgov-misc
+*/
+
+.expandable_header-right__on-medium {
+    float: none;
+
+    .u-respond-to-min(600px, {
+        float: right;
+    });
+}
+
+
+/* topdoc
   name: Form pattern showcase
   family: cfgov-misc
   patterns:
