--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4790,6 +4790,24 @@ img {
    misc
    ========================================================================== */
 /* topdoc
+  name: Expandables
+  family: cfgov-misc
+  patterns:
+    - name: Header right on medium
+      codenotes:
+        - .expandable_header-right__on-medium
+  tags:
+    - cfgov-misc
+*/
+.expandable_header-right__on-medium {
+  float: none;
+}
+@media only all and (min-width: 37.5em) {
+  .expandable_header-right__on-medium {
+    float: right;
+  }
+}
+/* topdoc
   name: Form pattern showcase
   family: cfgov-misc
   patterns:
