Responsive filter tweaks.

--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -192,7 +192,7 @@
       markup: |
         <div class="expandable expandable__expanded">
             <div class="expandable_header expandable_header__spaced">
-                <div class="expandable_header-right">
+                <div class="expandable_header-right expandable_header-right__float-on-medium">
                     <a class="expandable_target btn btn-secondary"
                        href="#post-filters-form">
                         Filter posts&nbsp;&nbsp;
@@ -204,7 +204,11 @@
                         </span>
                     </a>
                 </div>
-                <dl class="filtered-by filtered-by__align-with-btn list list__horizontal">
+                <dl class="filtered-by
+                           filtered-by__show-on-medium
+                           filtered-by__align-with-btn
+                           list
+                           list__horizontal">
                     <dt class="list_item">
                         <span class="filtered-by_header">Filtered by</span>
                     </dt>
@@ -286,13 +290,13 @@
           -----------------------
           .expandable
             .expandable_header__spaced
-              .expandable_header-right
+              .expandable_header-right.expandable_header-right__float-on-medium
                 .expandable_target.btn.btn-secondary
                   .expandable_cue-open
                     .cf-icon.cf-icon-down
                   .expandable_cue-close
                     .cf-icon.cf-icon-up
-              .filtered-by.filtered-by__align-with-btn.list.list__horizontal
+              .filtered-by.filtered-by__show-on-medium.filtered-by__align-with-btn.list.list__horizontal
             .expandable_content.padded-container
               .padded-container_body
                 .form-l.form-l__flush
