--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5343,18 +5343,18 @@ img {
   name: Expandables
   family: cfgov-misc
   patterns:
-    - name: Header right on medium
+    - name: Header right float on medium modifier
       codenotes:
-        - .expandable_header-right__on-medium
+        - .expandable_header-right__float-on-medium
   tags:
     - cfgov-misc
 */
 
-.expandable_header-right__on-medium {
+.expandable_header-right__float-on-medium {
   float: none;
 }
 
-.expandable_header-right__on-medium {
+.expandable_header-right__float-on-medium {
   float: right;
 }
 
@@ -6131,6 +6131,14 @@ img {
 
 .filtered-by {
   margin: 0;
+}
+
+.filtered-by__show-on-medium {
+  display: none;
+}
+
+.filtered-by__show-on-medium {
+  display: block;
 }
 
 .filtered-by_header {
@@ -7285,7 +7293,7 @@ a.focus .summary_header {
       markup: |
         <div class="expandable expandable__expanded">
             <div class="expandable_header expandable_header__spaced">
-                <div class="expandable_header-right">
+                <div class="expandable_header-right expandable_header-right__float-on-medium">
                     <a class="expandable_target btn btn-secondary"
                        href="#post-filters-form">
                         Filter posts&nbsp;&nbsp;
@@ -7297,7 +7305,11 @@ a.focus .summary_header {
                         </span>
                     </a>
                 </div>
-                <dl class="filtered-by filtered-by__align-with-btn list list__horizontal">
+                <dl class="filtered-by
+                           filtered-by__show-on-medium
+                           filtered-by__align-with-btn
+                           list
+                           list__horizontal">
                     <dt class="list_item">
                         <span class="filtered-by_header">Filtered by</span>
                     </dt>
@@ -7379,13 +7391,13 @@ a.focus .summary_header {
           -----------------------
           .expandable
             .expandable_header__spaced
-              .expandable_header-right
+              .expandable_header-right.expandable_header-right__float-on-medium
                 .expandable_target.btn.btn-secondary
                   .expandable_cue-open
                     .cf-icon.cf-icon-down
                   .expandable_cue-close
                     .cf-icon.cf-icon-up
-              .filtered-by.filtered-by__align-with-btn.list.list__horizontal
+              .filtered-by.filtered-by__show-on-medium.filtered-by__align-with-btn.list.list__horizontal
             .expandable_content.padded-container
               .padded-container_body
                 .form-l.form-l__flush
