--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -352,7 +352,7 @@
 
             <!-- Begin [inset] HTML -->
             <aside class="post_inset line-container">
-                <div class="line-container_body pull-quote">
+                <div class="line-container_body pull-quote pull-quote__large">
                     <div class="pull-quote_body">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Cum corrupti tempora nam nihil qui mollitia consectetur
@@ -365,6 +365,8 @@
         </div>
       codenotes:
         - "[inset layout='full']Quote text here[/inset]"
+      notes:
+        - "Note that .pull-quote needs the .pull-quote__large modifier class."
     - name: Inset (with attribution)
       markup: |
         <div style="overflow:hidden;">
