--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -74,6 +74,77 @@
 
 
 /* topdoc
+    name: Multi select
+    family: cfgov-misc
+    patterns:
+    - name: Default multi select
+      markup: |
+        <select multiple>
+            <option value="option1">Option 1</option>
+            <option value="option2">Option 2</option>
+            <option value="option3">Option 3</option>
+            <option value="option4">Option 4</option>
+        </select>
+    - name: Focused state
+      markup: |
+        <select class="focus" multiple>
+            <option value="option1">Option 1</option>
+            <option value="option2">Option 2</option>
+            <option value="option3">Option 3</option>
+            <option value="option4">Option 4</option>
+        </select>
+    - name: Error state
+      notes:
+        - Please review the notes on form input error icons in the form icons section below.
+      markup: |
+        <select class="error" multiple>
+            <option value="option1">Option 1</option>
+            <option value="option2">Option 2</option>
+            <option value="option3">Option 3</option>
+            <option value="option4">Option 4</option>
+        </select>
+        <span class="cf-form_input-icon cf-icon cf-icon-delete-round" role="alert">
+          <span class="jekyll-bug"></span>
+        </span>
+    - name: Success state
+      notes:
+        - Please review the notes on form input success icons in the form icons section below.
+      markup: |
+        <select class="success" multiple>
+            <option value="option1">Option 1</option>
+            <option value="option2">Option 2</option>
+            <option value="option3">Option 3</option>
+            <option value="option4">Option 4</option>
+        </select>
+        <span class="cf-form_input-icon cf-icon cf-icon-approved-round">
+          <span class="jekyll-bug"></span>
+        </span>
+    tags:
+    - cfgov-misc
+*/
+
+/* NOTE: all select[multiple] styles extend input[type="text"]. */
+
+select[multiple] {
+    &:extend(input[type="text"]);
+}
+
+select[multiple]:focus,
+select[multiple].focus {
+    // Class included for static state examples
+    &:extend(input[type="text"]:focus);
+}
+
+select[multiple].error {
+    &:extend(input[type="text"].error);
+}
+
+select[multiple].success {
+    &:extend(input[type="text"].success);
+}
+
+
+/* topdoc
   name: Form labels
   family: cfgov-misc
   patterns:
